force-app/main/default/objects/CaseTeamMember__c/CaseTeamMember__c.object-meta.xml
<CustomObject>
    <description>Represents a member of a Pre-Defined case team</description>
    <label>Case Team Member</label>
    <nameField>
        <displayFormat>CTM-{000}</displayFormat>
        <label>Case Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>