force-app/main/default/objects/CaseTeamMember__c/fields/Access__c.field-meta.xml
<CustomField>
    <fullName>Access__c</fullName>
    <description>Level of Access to Case</description>
    <inlineHelpText>Level of Access to Case</inlineHelpText>
    <label>Access</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CaseTeamAccess</valueSetName>
    </valueSet>
</CustomField>