force-app/main/default/objects/CaseTeamMember__c/fields/CaseTeam__c.field-meta.xml
<CustomField>
    <fullName>CaseTeam__c</fullName>
    <description>Case Team that this member is a part of</description>
    <inlineHelpText>Case Team that this member is a part of</inlineHelpText>
    <label>Case Team</label>
    <referenceTo>CaseTeam__c</referenceTo>
    <relationshipLabel>Case Team Members</relationshipLabel>
    <relationshipName>CaseTeamMembers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>