force-app/main/default/objects/CaseTeamMember__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Role of Case Team Member. Defines access to PUC Case.</description>
    <inlineHelpText>Role of Case Team Member. Defines access to PUC Case.</inlineHelpText>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CaseTeamRoles</valueSetName>
    </valueSet>
</CustomField>