force-app/main/default/objects/CaseTeamMember__c/validationRules/User_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>User_is_Required</fullName>
    <active>true</active>
    <description>Unable to required User Lookup field, so we need this rule</description>
    <errorConditionFormula>ISBLANK( User__c )</errorConditionFormula>
    <errorDisplayField>User__c</errorDisplayField>
    <errorMessage>A User is required to save this record</errorMessage>
</ValidationRule>